<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Currency and Stock Widget</string>
    <string name="medium_widget_name">Currency and Stock Widget 4x1</string>
    <string name="large_widget_name">Currency and Stock Widget 4x2</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="rate_app">Rate app</string>
    <string name="rate_app_text">If you enjoy using Currency and Stock Widget, please take a moment to rate it. Thanks for your support!</string>
    <string name="rate_now">Rate Now</string>
    <string name="rate_later">Later</string>
    <string name="rate_no">No, Thanks</string>

    <string name="dynamic">Dynamic</string>
    <string name="change">Change</string>
    <string name="remove">Remove</string>

    <string name="action_accept">Accept</string>
    <string name="refresh">Refresh</string>
    <string name="for_">For</string>
    <string name="give">Give</string>
    <string name="add_quote">+ Add quote</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>

    <string name="action_quotes">My Quotes</string>
    <string name="action_display">Display</string>
    <string name="action_settings">Settings</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_search">Search</string>

    <string name="configure_menu_item_future">Future</string>
    <string name="configure_menu_item_currency">Currency</string>
    <string name="configure_menu_item_goods">Goods</string>
    <string name="configure_menu_item_indices">Indices</string>
    <string name="configure_menu_item_stock">Stock</string>
    <string name="configure_menu_my_quotes">My Quotes</string>

    <string name="goods_copper">Copper</string>
    <string name="goods_gold">Gold</string>
    <string name="goods_palladium">Palladium</string>
    <string name="goods_platinum">Platinum</string>
    <string name="goods_silver">Silver</string>

    <string name="connection_status_no_internet">no internet connection</string>
    <string name="connection_status_no_wifi">wi-fi disabled for auto update</string>
    <string name="connection_status_default_problem">connection problem</string>

    <string name="select_quotes_type">Select the type of quotes</string>

    <!-- Hint that the user can search across sessions -->
    <string name="search_quotes">Search quotes</string>

    <!-- Search label that shows the type of data being searched for when the user clicks the
    Search button. -->
    <string name="search_label">Yahoo quotes</string>

    <string name="exc_already_exists">already exists!</string>

    <array name="quotes_type_array">
        <item>Stock</item>
        <item>Future</item>
        <item>Currency</item>
        <item>Goods</item>
        <item>Indices</item>
        <item>My Quotes</item>
    </array>

    <string name="gc">Gold</string>
    <string name="si">Silver</string>
    <string name="pl">Platinum</string>
    <string name="pa">Palladium</string>
    <string name="hg">Copper</string>
    <string name="bz">Brent Oil</string>
    <string name="cl">Light Oil</string>
    <string name="ng">Gas</string>
    <string name="c">Corn</string>
    <string name="s">Soybeans</string>
    <string name="zw">Wheat</string>
    <string name="cc">Cocoa</string>
    <string name="kc">Coffee</string>
    <string name="ct">Cotton</string>
    <string name="lb">Lumber</string>
    <string name="oj">Orange Juice</string>
    <string name="sb">Sugar</string>

    <string name="gcf15_cmx">Gold</string>
    <string name="gcv15_cmx">Gold(Oct)</string>
    <string name="gcx15_cmx">Gold(Current)</string>
    <string name="sif15_cmx">Silver</string>
    <string name="siv15_cmx">Silver(Oct)</string>
    <string name="siz15_cmx">Silver(Current)</string>
    <string name="plf15_nym">Platinum</string>
    <string name="plz15_nym">Platinum(Current)</string>
    <string name="paf15_nym">Palladium</string>
    <string name="paz15_nym">Palladium(Current)</string>
    <string name="hgf15_cmx">Copper</string>
    <string name="hgx15_cmx">Copper(Current)</string>
    <string name="bzj15_nym">Brent Oil</string>
    <string name="bzz15_nym">Brent(Dec) Oil</string>
    <string name="bzf16_nym">Brent(Current) Oil</string>
    <string name="clx15_nym">Light(Nov) Oil</string>
    <string name="clz15_nym">Light(Dec) Oil</string>
    <string name="ngh15_nym">Gas</string>
    <string name="ngz15_nym">Gas(Current)</string>
    <string name="ch15_cbt">Corn</string>
    <string name="cz15_cbt">Corn(Current)</string>
    <string name="sh15_cbt">Soybeans</string>
    <string name="sf16_cbt">Soybeans(Current)</string>
    <string name="zwh15_cbt">Wheat</string>
    <string name="zwz15_cbt">Wheat(Current)</string>

    <string name="cch15_nyb">Cocoa</string>
    <string name="kch15_nyb">Coffee</string>
    <string name="cth15_nyb">Cotton</string>
    <string name="lbh15_cme">Lumber</string>
    <string name="ojh15_nyb">Orange Juice</string>
    <string name="sbh15_nyb">Sugar</string>

    <!-- indices -->

    <array name="good_array">
        <item>Gold(GCF15.CMX)</item>
        <item>Gold(GCV15.CMX)</item>
        <item>Gold(GCX15.CMX)</item> <!-- expire: 25-Nov-15 -->
        <item>Silver(SIF15.CMX)</item>
        <item>Silver(SIV15.CMX)</item>
        <item>Silver(SIZ15.CMX)</item> <!-- expire: 29-Dec-15 -->
        <item>Platinum(PLF15.NYM)</item>
        <item>Platinum(PLZ15.NYM)</item> <!-- expire: 29-Dec-15 -->
        <item>Palladium(PAF15.NYM)</item>
        <item>Palladium(PAZ15.NYM)</item> <!-- expire: 29-Dec-15 -->
        <item>Copper(HGF15.CMX)</item>
        <item>Copper(HGX15.CMX)</item> <!-- expire: 25-Nov-15 -->
        <item>Brent Oil(BZJ15.NYM)</item>
        <item>Brent(Dec) Oil(BZZ15.NYM)</item>
        <item>Brent(Jan) Oil(BZF16.NYM)</item> <!-- expire: 16-Dec-15 -->
        <item>Light(Nov) Oil(CLX15.NYM)</item>
        <item>Light(Dec) Oil(CLZ15.NYM)</item> <!-- expire: 20-Nov-15 -->
        <item>Natural Gas(NGH15.NYM)</item>
        <item>Natural Gas(NGZ15.NYM)</item> <!-- expire: 25-Nov-15 -->
        <item>Corn(CH15.CBT)</item>
        <item>Corn(CZ15.CBT)</item> <!-- expire: 14-Dec-15 -->
        <item>Soybeans(SH15.CBT)</item>
        <item>Soybeans(SF16.CBT)</item> <!-- expire: 14-Jan-16 -->
        <item>Wheat(ZWH15.CBT)</item>
        <item>Wheat(ZWZ15.CBT)</item> <!-- expire: 14-Dec-15 -->
    </array>

    <string name="pref_auto_update">Auto update</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_change">Change theme</string>
    <string name="pref_update_via">Update via</string>
    <string name="pref_update_interval">Update interval</string>
    <string name="pref_data">Data</string>
    <string name="pref_clean_database">Clean database</string>
    <string name="pref_widget_settings">Widget settings</string>
    <string name="pref_bg_visibility">Background visibility</string>
    <string name="pref_bg_color">Background color</string>
    <string name="pref_wakeUp_title">Update when screen on</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="data_will_be_lost">Data will be lost!</string>

    <string-array name="update_interval_entries">
        <item>1 min</item>
        <item>5 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>1 hour</item>
        <item>3 hour</item>
        <item>6 hour</item>
        <item>9 hour</item>
        <item>12 hour</item>
        <item>1 day</item>
        <item>2 days</item>
        <item>Never</item>
    </string-array>
    <string-array name="update_interval_entry_values">
        <item>60000</item>
        <item>300000</item>
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>10800000</item>
        <item>21600000</item>
        <item>32400000</item>
        <item>43200000</item>
        <item>86400000</item>
        <item>172800000</item>
        <item>0</item>
    </string-array>

    <string-array name="color_entries">
        <item>turquoise</item>
        <item>green_sea</item>
        <item>emerald</item>
        <item>nephritis</item>
        <item>peter_river</item>
        <item>belize_hole</item>
        <item>amethyst</item>
        <item>wisteria</item>
        <item>wet_asphalt</item>
        <item>midnight_blue</item>
        <item>sun_flower</item>
        <item>orange</item>
        <item>carrot</item>
        <item>pumpkin</item>
        <item>alizarin</item>
        <item>pomegranate</item>
        <item>clouds</item>
        <item>silver</item>
        <item>concrete</item>
        <item>asbestos</item>
    </string-array>
    <string-array name="color_entry_values">
        <item>#1abc9c</item>
        <item>#16a085</item>
        <item>#2ecc71</item>
        <item>#27ae60</item>
        <item>#3498db</item>
        <item>#2980b9</item>
        <item>#9b59b6</item>
        <item>#8e44ad</item>
        <item>#34495e</item>
        <item>#2c3e50</item>
        <item>#f1c40f</item>
        <item>#f39c12</item>
        <item>#e67e22</item>
        <item>#d35400</item>
        <item>#e74c3c</item>
        <item>#c0392b</item>
        <item>#ecf0f1</item>
        <item>#bdc3c7</item>
        <item>#95a5a6</item>
        <item>#7f8c8d</item>
    </string-array>

    <string name="pref_slider_fully_transparent">Fully transparent</string>
    <string name="pref_slider_visible">\uff05 opacity</string>
    <string name="pref_slider_fully_opaque">Fully opaque</string>
<!--
    <string-array name="alpha_entries">
        <item>Fully transparent</item>
        <item>25\uff05 visible</item>
        <item>50\uff05 visible</item>
        <item>75\uff05 visible</item>
        <item>Fully opaque</item>
    </string-array>
    <string-array name="alpha_entry_values">
        <item>00</item>
        <item>40</item>
        <item>80</item>
        <item>C0</item>
        <item>FF</item>
    </string-array>-->

    <string-array name="update_via_entries">
        <item>Only when on Wi-Fi</item>
        <item>On any network</item>
    </string-array>
    <string-array name="update_via_entry_values">
        <item>wi-fi</item>
        <item>any</item>
    </string-array>

    <string name="nyse_is_open">NYSE is open. Closing in %1$d d %2$d h %3$d m.</string>
    <string name="nyse_is_closed">NYSE is closed. Opening in %1$d d %2$d h %3$d m.</string>

</resources>
