<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_auto_update">
        <ListPreference
            android:entries="@array/update_via_entries"
            android:entryValues="@array/update_via_entry_values"
            android:defaultValue="wi-fi"
            android:key="pref_listUpdateVia"
            android:summary="@string/pref_update_via"
            android:title="@string/pref_update_via">
        </ListPreference>
        <ListPreference
            android:entries="@array/update_interval_entries"
            android:entryValues="@array/update_interval_entry_values"
            android:defaultValue="1800000"
            android:key="pref_listUpdateInterval"
            android:summary="@string/pref_update_interval"
            android:title="@string/pref_update_interval">
        </ListPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_widget_settings">
        <ru.besttuts.stockwidget.ui.preferences.ColorPreference
            android:entries="@array/color_entries"
            android:entryValues="@array/color_entry_values"
            android:defaultValue="#34495e"
            android:key="pref_listBgColor"
            android:summary="@string/pref_bg_color"
            android:title="@string/pref_bg_color">
        </ru.besttuts.stockwidget.ui.preferences.ColorPreference>
        <!--<ListPreference
            android:entries="@array/alpha_entries"
            android:entryValues="@array/alpha_entry_values"
            android:defaultValue="C0"
            android:key="pref_listBgVisibility"
            android:summary="@string/pref_bg_visibility"
            android:title="@string/pref_bg_visibility">
        </ListPreference>-->

        <ru.besttuts.stockwidget.ui.preferences.SliderPreference
            android:defaultValue="C0"
            android:key="pref_listBgVisibility"
            android:summary="@string/pref_bg_visibility"
            android:title="@string/pref_bg_visibility" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_data">
        <ru.besttuts.stockwidget.ui.preferences.DataCleanPreference
            android:summary="@string/pref_clean_database"
            android:title="@string/pref_clean_database">
        </ru.besttuts.stockwidget.ui.preferences.DataCleanPreference>
    </PreferenceCategory>

</PreferenceScreen>