<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_accept"
        android:icon="@drawable/ic_action_accept"
        android:title="@string/action_accept"
        yourapp:showAsAction="ifRoom"  />

    <item
        android:icon="@drawable/ic_action_overflow"
        android:title="@string/action_settings"
        yourapp:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menuQuotes"
                android:title="@string/action_quotes" />
            <item
                android:id="@+id/menuDisplay"
                android:title="@string/action_display" />
            <item
                android:id="@+id/menuSettings"
                android:title="@string/action_settings" />
        </menu>
    </item>

<!--

    <item android:id="@+id/my_menu_item"
        android:title="@string/action_settings"
        yourapp:showAsAction="ifRoom"
        android:actionProviderClass="ru.besttuts.stockwidget.ui.EconomicWidgetConfigureActivity.ConfigActionProvider" />
-->

</menu>